# edgeless-exp-setup

./: LICENSE  README.md  start_cluster.sh
classifier_training/: Cargo.toml  preprocessing.py
classifier_training/src/: main.rs
data_analysis/: pareto.ipynb  power_analysis.ipynb  power_vs_cores.ipynb  ttc_analysis.ipynb  ttc_vs_cores.ipynb
functions/classify/: Cargo.toml  function.json
functions/classify/src/: lib.rs
functions/extract_features/: function.json
functions/extract_features/src/: lib.rs
functions/generate_samples/: function.json
functions/generate_samples/src/: lib.rs
functions/handle_class_result/src/: lib.rs
misc/: redis_logger.py
misc/acc_wf_perf_test/: workflow.json
misc/delegated_orchestrator/: config.json
misc/delegated_orchestrator/src/: network_aware_orchestrator.rs
misc/latency_measurement/: config.json
misc/old_tests/: update_config_files.py
misc/old_tests/accelerometer_class_workflow/: workflow.json  workflow_test.json
misc/old_tests/accelerometer_classification_sample/: Cargo.toml
misc/old_tests/accelerometer_classification_workflow_old/: workflow.json
misc/old_tests/classifier_serialization/: Cargo.toml
misc/old_tests/classifiers_test/: Cargo.toml  classifier_test.wasm  function.json  workflow.json
misc/old_tests/classifiers_test/src/: lib.rs
misc/old_tests/perf_test/: workflow.json
misc/old_tests/perf_test/functions/: Cargo.toml  function.json  perfTestFun.wasm
misc/old_tests/perf_test/functions/src/: lib.rs
misc/old_tests/serialize_test/: Cargo.toml
misc/old_tests/serialize_test/src/: main.rs
otii-automation/: main.py  observer.py  requirements_controller.txt  requirements_device.txt
otii-automation/config_files/: config_both_funcs_on_vm.toml  config_first_func_on_rpi_second_func_on_vm.toml  config_first_func_on_vm_second_func_on_rpi.toml  config_rpi_only.toml
otii-automation/otii_automation/: __init__.py
otii-automation/otii_automation/controller/: __init__.py  controller.py  util.py
otii-automation/otii_automation/device/: __init__.py  device.py  util.py
otii-automation/otii_automation/environment/: environment.py  mode.py
otii-automation/otii_automation/rdt/: __init__.py  fast_rdt.py  message.py  rdt.py  util.py
workflows/: generic_workflow.json  workflow_both_funcs_on_rpi.json  workflow_both_funcs_on_vm.json  workflow_first_func_on_rpi_second_func_on_vm.json  workflow_first_func_on_vm_second_func_on_rpi.json
(+38 files in other folders)
