[package]
name = "classifier_training"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
statrs = "0.11.0"
smartcore = { version = "0.3.1", features = [ "serde" ] }
ndarray = "0.15"
nalgebra = "0.29"
base64 = "0.21"
bincode = "1.3"
serde_json = "1.0" 
rusqlite = { version = "0.30.0", features = ["bundled"] }
