[workspace]

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "z"
panic = "abort"
codegen-units = 1
strip = true

[package]
name = "classify"
version = "0.1.0"
edition = "2021"

[lib]
name = "classify"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
edgeless_function = { path = "../../../edgeless/edgeless_function" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smartcore = { version = "0.3", features = [ "serde" ] }
nalgebra = "0.29"
statrs = "0.11.0"
ndarray = "0.15"
base64 = "0.21"
bincode = "1.3"