[package]
name = "serialize_test"
version = "0.1.0"
edition = "2021"

[dependencies]
smartcore = { version = "0.3.1", features = [ "serde" ] }
ndarray = "0.15"
statrs = "0.11.0"
nalgebra = "0.29"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rusqlite = { version = "0.30.0", features = ["bundled"] }
base64 = "0.21"
serde_json = "1.0" 